--- a/.env
+++ b/.env
@@ -18,3 +18,24 @@
 APP_ENV=dev
 APP_SECRET=dfeae3d8b24f5d3fa0d8e043550ff109
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+ #DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://root:hola@db:3306/documentos?serverVersion=5.7"
+#DATABASE_URL="postgresql://symfony:ChangeMe@db:5432/app?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###e
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=e04ffe2b33cc03194f653cc26bb8c988
+###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
