--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,32 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.12",
+        "friendsofsymfony/rest-bundle": "^3.3",
+        "gesdinet/jwt-refresh-token-bundle": "^1.1",
+        "lexik/jwt-authentication-bundle": "^2.16",
+        "nelmio/cors-bundle": "^2.2",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.6",
+        "sensio/framework-extra-bundle": "^6.2",
+        "sonata-project/admin-bundle": "^4.16",
+        "sonata-project/doctrine-orm-admin-bundle": "^4.3",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
+        "symfony/form": "^5.4",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
+        "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
-    },
-    "require-dev": {
+        "symfony/serializer": "5.4.*",
+        "symfony/validator": "^5.4",
+        "symfony/yaml": "5.4.*",
+        "twig/twig": "^3.4"
     },
     "config": {
         "allow-plugins": {
@@ -63,5 +81,13 @@
             "allow-contrib": false,
             "require": "5.4.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/debug-bundle": "^5.4",
+        "symfony/maker-bundle": "^1.43",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/var-dumper": "^5.4",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
