--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,15 @@ framework:
     php_errors:
         log: true
 
+    translator: { fallbacks: [ 'es' ] }
+
+    serializer:
+        enabled: true
+        mapping:
+            paths: [ '%kernel.project_dir%/config/serializer/' ]
+
+
+
 when@test:
     framework:
         test: true
