--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+api_login_check:
+  path: /api/login_check
+
+
+# config/routes.yaml
+api_refresh_token:
+  path: /api/token/refresh
